--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <h1> Sri Varsha Textiles</h1>
     <p>Quality fabrics crafted with innovation and tradition</p>
     <p>14,Vallalar 1st street Thinamaninagar,Madurai-625001</p>
-    <img src="C:\Users\Sri Varsha\Desktop\Screenshot 2025-12-16 114420.jpg" alt="Picture" class="img" id="Img">
+    <img src="images/textile.jpg" alt="Picture" class="img" id="Img">
   </header>
   <section id="start" class="getstarted">
     <a href="#contact" class="btn">Get Started</a>
@@ -165,3 +165,4 @@
 
 </body>
 </html>
+
